# VSCode-template

./: .coverage  .env.example  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .vscodeignore  CHANGELOG-COPILOT-INSTRUCTIONS-BACKUP_2025115.md  CHANGELOG.md  CHANGELOG_SYNTHETIC.md  CONTEXT-BRANCH.md  CONTEXT-NEXT-BRANCH.md  CONTEXT-SESSION.md  EXTENSION_TEST.md  MybusinessMCP-mcp-extension-1.0.0.vsix  ORCHESTRATOR_WORKFLOW_ANALYSIS.md  README.md  SESSION-CONTEXT.md  TESTING_GUIDE.md  TODO-ADD-MEMORY-AND-SEQUENTIAL-THINKING.md  TODO.md  TSDOC_REFERENCE_GUIDE.md  UserContext-mcp-extension-1.0.0.vsix  VSCode-template.code-workspace  agent-shared-utilities.md  agent.config.json  debug_server.js  eslint.config.js  fix-aliases.sh  install-github-copilot-instructions-work.py  jest.config.cjs  jest.config.js  mybusiness-mcp-extension-1.0.0.vsix  orchestration.md  package-lock.json  package.json  pyproject.toml  script.py  setup.py  (+5 more)
.github/: copilot-instructions.md
.github/chatmodes/: docwriter.chatmode.md  docwriter.chatmode.mwa.md  reviewer.chatmode.md  reviewer.chatmode.mwa.md  reviewer.md
.github/instructions/: default-guidelines.instructions.md  default-guidelines.md  (+1 more)
.repo-ops-backups/: CHANGELOG.md.2025-11-13T02-30-09-609Z.bak  CHANGELOG.md.2025-11-14T04-09-45-252Z.bak  CHANGELOG.md.2025-11-14T12-16-06-483Z.bak  CHANGELOG.md.2025-11-14T13-35-40-832Z.bak  CHANGELOG.md.2025-11-14T14-03-03-623Z.bak  CHANGELOG.md.2025-11-14T14-03-42-710Z.bak  CHANGELOG.md.2025-11-14T16-29-07-180Z.bak  CHANGELOG.md.2025-11-14T17-43-55-380Z.bak  CHANGELOG.md.2025-11-14T17-44-12-476Z.bak  CHANGELOG.md.2025-11-14T17-44-27-964Z.bak  CHANGELOG.md.2025-11-14T17-49-29-242Z.bak  CHANGELOG.md.2025-11-14T17-51-47-480Z.bak  CHANGELOG.md.2025-11-14T17-53-22-721Z.bak  CHANGELOG.md.2025-11-14T17-55-20-942Z.bak  CHANGELOG.md.2025-11-14T17-56-02-115Z.bak  CHANGELOG.md.2025-11-14T17-57-45-356Z.bak  CHANGELOG.md.2025-11-14T17-59-31-884Z.bak  CHANGELOG.md.2025-11-14T18-00-09-309Z.bak  CHANGELOG.md.2025-11-14T18-00-19-627Z.bak  CHANGELOG.md.2025-11-14T18-01-08-362Z.bak  CHANGELOG.md.2025-11-14T18-01-45-215Z.bak  CHANGELOG.md.2025-11-14T18-01-56-087Z.bak  CHANGELOG.md.2025-11-14T18-28-45-995Z.bak  CHANGELOG.md.2025-11-14T18-31-17-531Z.bak  CHANGELOG.md.2025-11-14T18-33-33-420Z.bak  CHANGELOG.md.2025-11-14T18-36-34-901Z.bak  CHANGELOG.md.2025-11-14T18-37-37-792Z.bak  CHANGELOG.md.2025-11-14T18-40-02-443Z.bak  CHANGELOG.md.2025-11-14T18-51-58-698Z.bak  CHANGELOG.md.2025-11-14T18-52-37-285Z.bak  CHANGELOG.md.2025-11-14T18-52-53-079Z.bak  CHANGELOG.md.2025-11-14T18-52-57-398Z.bak  CHANGELOG.md.2025-11-14T19-43-22-319Z.bak  CHANGELOG.md.2025-11-14T19-45-42-974Z.bak  CHANGELOG.md.2025-11-14T20-17-29-698Z.bak  CHANGELOG.md.2025-11-14T20-28-43-122Z.bak  CHANGELOG.md.2025-11-14T20-42-32-230Z.bak  CHANGELOG.md.2025-11-15T17-53-29-257Z.bak  CHANGELOG.md.2025-11-15T19-57-11-195Z.bak  CHANGELOG.md.2025-11-15T20-09-54-312Z.bak  (+19 more)
_ARCHIVE/: Orchestrator_worfklow_Analysis__20251110.md  RESOURCES.MD  TEMP_CLI_INVESTIGATION.md  TESTING_GUIDE.md  branch__feat_finalize-agent-concept.md  branch__feat_update-repo-automation.md  copilot-instructions.backup.2025-11-13.md  copilot-instructions.overhaul.md  notworking.txt  working.txt
api/: README.md  modules.md
compliance/: enforcement-pipeline.md
docs/: README.md  agent-configuration-enhancement.md  agent-modular-structure-implementation.md  build-pipeline.md  changelog.md  index.md  mcp-stdio-architecture.md  modules.md  orchestration.md  template-variables.md  typescript-configuration-implementation.md
my_work_assistant/: CHANGELOG.md  Dockerfile  LICENSE  README.md  my-work-assistant.config.json
python/: __init__.py  mcp_schemas.py  requirements.txt
src/: extension.ts  mcp.config.json  mcpCache.ts  mcpSync.ts  mockOrchestrationAgents.ts  schemaPrompt.ts  types.ts  validation.ts  vscode-chat.d.ts
tests/: agentResponse.integration.test.ts  clarificationAgent.help.test.ts  communicationAgent.test.ts  configurationLoader.test.ts  dataAgent.response.test.ts  dataAgent.test.ts  databaseAgent.cache-errors.test.ts  databaseAgent.operators.test.ts  databaseAgent.response.test.ts  databaseAgent.test.ts  diagnoseIds.test.ts  extension.test.ts  generateMcpConfig.test.ts  jsonRpc.dispatcher.test.ts  localToolRegistry.test.ts  mcpCache.extra.test.ts  mcpCache.test.ts  mcpRegistration.test.ts  mcpShared.test.ts  mcpSync.test.ts  mockOrchestrationAgents.test.ts  orchestrator.descriptors.test.ts  orchestrator.overrides.test.ts  orchestrator.response.test.ts  orchestrator.test.ts  relevantDataManagerAgent.catalogueCacheDivergence.test.ts  relevantDataManagerAgent.catalogueCacheHit.test.ts  relevantDataManagerAgent.edges.test.ts  relevantDataManagerAgent.entityConnectionsErrors.test.ts  relevantDataManagerAgent.errorPaths.test.ts  relevantDataManagerAgent.relationshipCoverage.test.ts  relevantDataManagerAgent.relationshipFailures.test.ts  relevantDataManagerAgent.snapshotCacheInvalidation.test.ts  relevantDataManagerAgent.test.ts  repoOps.changelogCli.flagsExit.test.ts  repoOps.changelogExtract.test.ts  repoOps.changelogMap.test.ts  repoOps.changelogMapFastDiff.test.ts  repoOps.changelogWrite.filesFilter.test.ts  repoOps.changelogWrite.flags.test.ts  (+32 more)
tests_tmp/: CHANGELOG.synthetic.1763148764871.md  CHANGELOG.synthetic.1763148766301.md
(+935 files in other folders)
