[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_work_assistant"
version = "0.1.0"
description = "My Work Assistant MCP server"
authors = [{name = "My Work Assistant", email = "support@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "fastapi",
    "typer",
    "pydantic>=2",
    "jinja2",
    "jsonschema",
    "watchdog",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["my_work_assistant/src"]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings"
filterwarnings = ["error"]
markers = [
    "docstring",
    "typing",
]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["my_work_assistant"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "D"]
ignore = []

